ngrx functional now for results

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -9,4 +9,7 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+    <div>
+        <search-results></search-results>
+    </div>
 </div>
