--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,3 +1,8 @@
-<div *ngFor="let result of results">
-    {{result}}
+<link rel="stylesheet" href="./style.css">
+
+<div class="results-card basic-cont">
+    {{ result.login }}
+    <a href='/#/details'>
+        details
+    </a>
 </div>
