--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,8 +1,9 @@
 <link rel="stylesheet" href="./style.css">
-
-<div class="results-card basic-cont">
-    {{ result.login }}
-    <a href='/#/details'>
-        details
-    </a>
+<div class="container">
+    <div class="results-card basic-cont row">
+        <div class="git-name-subcard col-xs-12">
+            <img class="ava" src="{{ result.avatar_url }}">
+            {{ result.login }}
+        </div>
+    </div>
 </div>
