--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,9 +1,12 @@
+<link rel="stylesheet" href="./style.css">
+
 <div>
+    <div class="container">
     <img class="user-avatar" src="{{avatarUrl}}">
     {{login}}
     {{location}}
     <div *ngFor="let repo of repos; let i = index">
-        <div class="container">
+        
             <div class="row repos">
                 <div class="col-md-8">
                     {{repo.full_name}}
