--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -3,7 +3,9 @@
     <div class="results-card basic-cont row">
         <div class="git-name-subcard col-xs-12">
             <img class="ava" src="{{ result.avatar_url }}">
-            {{ result.login }}
+            <div class="name">
+                {{ result.login }}
+            </div>
         </div>
     </div>
 </div>
