--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 
 <div class="navbar">
     <div class="title">
-        GITSEARCH
+        <a href="/#/search">
+            GITSEARCH
+        </a> 
     </div>
 </div>
 <router-outlet></router-outlet>
