--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,19 +1,20 @@
 <link rel="stylesheet" href="./style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-<div class="container-fluid">
-    <div class="form-container basic-cont">
-        <form class="search-form" (ngSubmit)="onSubmit()"> 
-            <div>
-                <input type="text" [(ngModel)]="model.username" name="username" class="form-control text-input" placeholder="SEARCH">
-            </div>
-            <button class="search-button btn" type="submit">SEARCH</button>
-        </form>
-    </div>
-    <div *ngFor="let result of resultObj; let i=index" (click)="onClick(result.login)">
-        <search-results [result]="result"></search-results>
-    </div>
-    <button class="next-button btn" (click)="onNext()" *ngIf="getResultSuccess === true">
+
+<div class="form-container basic-cont">
+    <form class="search-form" (ngSubmit)="onSubmit()"> 
+        <div>
+            <input type="text" [(ngModel)]="model.username" name="username" class="form-control text-input" placeholder="SEARCH">
+        </div>
+        <button class="search-button btn" type="submit">SEARCH</button>
+    </form>
+</div>
+<div *ngFor="let result of resultObj; let i=index" (click)="onClick(result.login)">
+    <search-results [result]="result"></search-results>
+</div>
+<div class="basic-cont">
+    <button class="next-button btn" (click)="onNext()" *ngIf="nextExists() === true">
         NEXT
     </button>
 </div>
