--- a/src/app/search/style.css
+++ b/src/app/search/style.css
@@ -2,15 +2,7 @@
     margin: 0 auto;
     width: 90%;
     display: block;
-    max-width: 900px;
-}
-
-.results-card{
-    background-color: #f8f8ff;
-    height: 80px;
-    line-height: 80px;
-    margin-top: 10px;
-    padding: 5px;
+    max-width: 760px;
 }
 
 .form-container {
@@ -42,4 +34,8 @@
 
 .hidden {
     display: none;
+}
+
+.container {
+    max-width: 760px;
 }
